@@ -30,7 +30,7 @@ class ResourceSetTest {
     ResourceSet set = new ResourceSet();
 
     set.add(new Resource(null, new ResourceId("poo1", "resource1"), "value1"));
-    set.add(new Resource(null, new ResourceId("poo1", "resource2"), new Integer(2)));
+    set.add(new Resource(null, new ResourceId("poo1", "resource2"), Integer.valueOf(2)));
     assertEquals(2, set.filterByNameRegex(".*").size());
     assertEquals(1, set.filterByNameRegex("resource1").size());
     assertEquals(1, set.filterByNameRegex("resource2").size());
@@ -43,7 +43,7 @@ class ResourceSetTest {
     ResourceSet set = new ResourceSet();
 
     set.add(new Resource(null, new ResourceId("poo1", "resource1"), "value1"));
-    set.add(new Resource(null, new ResourceId("poo1", "resource2"), new Integer(2)));
+    set.add(new Resource(null, new ResourceId("poo1", "resource2"), Integer.valueOf(2)));
 
     assertEquals(1, set.filterByClassnameRegex(".*String").size());
     assertEquals(1, set.filterByClassnameRegex(String.class.getName()).size());
